# SWFRecomp

./: .gitignore  .gitmodules  ABC_IMPLEMENTATION_INFO.md  ABC_PARSER_GUIDE.md  ABC_PARSER_RESEARCH.md  AS3_IMPLEMENTATION_GUIDE.md  AS3_TEST_SWF_GENERATION_GUIDE.md  CMakeLists.txt  COMMIT_MESSAGE.txt  FONT_IMPLEMENTATION_ANALYSIS.md  FONT_PHASE1_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  SEEDLING_IMPLEMENTATION_GUIDE.md  WASM_PROJECT_PLAN.md
deprecated/: AS3_C_IMPLEMENTATION_PLAN.md
docs/: .gitignore  STRING_VARIABLE_NEXT_STEPS.md  STRING_VARIABLE_STORAGE_IMPLEMENTATION.md  STRING_VARIABLE_STORAGE_PLAN.md  SWFRECOMP_VS_SWFMODERNRUNTIME_SEPARATION.md  index.html
include/: common.h  config.hpp  context.hpp  field.hpp  recompilation.hpp  swf.h  swf.hpp  tag.hpp
include/action/: action.hpp  initial_strings.hpp  stackvalue.hpp
scripts/: add_configs_to_all_tests.sh  build_all_examples.sh  build_all_native.sh  build_test.sh  deploy_example.sh  excluded_tests.conf  generate_examples_index.sh
src/: config.cpp  field.cpp  main.cpp  recompilation.cpp  swf.cpp  tag.cpp
src/action/: action.cpp
tests/: .gitignore  all_tests.sh  test.sh  test_vecs.txt
tests/add_floats_consecutive_swf_4/: test.swf
tests/add_floats_imprecise_swf_4/: config.toml  test.swf
tests/add_floats_swf_4/: test.swf  test.swf.bak
tests/add_strings_imprecise_swf_4/: test.swf
tests/add_strings_swf_4/: test.swf
tests/and_floats_both_0_swf_4/: test.swf
tests/and_floats_first_1_swf_4/: test.swf
tests/and_floats_nonzero_swf_4/: test.swf
tests/and_floats_second_1_swf_4/: test.swf
tests/and_floats_swf_4/: test.swf
tests/divide_floats_error_swf_4/: test.swf
tests/dyna_string_triple_vars_optimized_swf_4/: test.swf
tests/dyna_string_triple_vars_swf_4/: main.c  test.swf
tests/dyna_string_vars_swf_4/: test.swf  test_main.c  test_vars
tests/equals_floats_0_swf_4/: test.swf
tests/equals_floats_1_swf_4/: test.swf
tests/equals_not_floats_false_swf_4/: test.swf
tests/equals_not_floats_swf_4/: test.swf
tests/float_vars_swf_4/: test.swf  test.swf.bak
tests/if_false_swf_4/: test.swf
tests/if_swf_4/: test.swf
tests/jump_swf_4/: test.swf
tests/less_floats_false_swf_4/: test.swf
tests/less_floats_swf_4/: test.swf
tests/multi_push_vars_swf_4/: test.swf
tests/multiply_floats_swf_4/: CMakeLists.txt  test.swf
tests/not_floats_nonzero_swf_4/: test.swf
tests/or_floats_false_swf_4/: test.swf
tests/or_floats_first_true_swf_4/: test.swf
tests/or_floats_nonzero_swf_4/: test.swf
tests/or_floats_second_true_swf_4/: test.swf
tests/or_floats_swf_4/: test.swf
tests/speed_test_swf_4/: CMakeLists.txt  test.swf
tests/string_add_a_list_swf_4/: test.swf
tests/string_add_b_list_swf_4/: test.swf
tests/string_add_both_lists_swf_4/: test.swf
tests/string_add_equals_a_not_list_false_swf_4/: test.swf
tests/string_add_equals_b_not_list_swf_4/: test.swf
tests/string_add_equals_false_swf_4/: test.swf
tests/string_add_equals_swf_4/: test.swf
tests/string_add_length_swf_4/: test.swf
tests/string_add_swf_4/: .gitignore  main.c  test.swf
wasm-hello-world/: README.md  build.sh  index.html
wasm_wrappers/: README.md  index_template.html  main.c
(+48 files in other folders)
